src/test/ui/issues/issue-19482.stderr
error[E0191]: the value of the associated type `A` (from the trait `Foo`) must be specified
  --> $DIR/issue-19482.rs:10:12
   |
LL |     type A;
   |     ------- `A` defined here
...
LL | fn bar(x: &dyn Foo) {}
   |            ^^^^^^^ associated type `A` must be specified

error: aborting due to previous error

For more information about this error, try `rustc --explain E0191`.
